--- a/playpen/ansible/roles/dev/tasks/main.yml
+++ b/playpen/ansible/roles/dev/tasks/main.yml
@@ -17,8 +17,32 @@
       dest: /etc/yum.repos.d/fedora-pulp.repo
 
 - name: Enable Pulp 2.7 beta repository
-  command: yum-config-manager --enable pulp-2.7-beta
+  command: dnf config-manager --set-enabled pulp-2.7-beta
   when: pulp_27_beta_repo_enabled == false
+
+# This and its related fact should go away when we do have an f23 build, since it'll be a noop at that point
+- name: Rejigger the repo file if fedora 23 builds aren't available
+  replace:
+      dest: /etc/yum.repos.d/fedora-pulp.repo
+      regexp: 'fedora-\$releasever'
+      replace: fedora-22
+  when: not pulp_27_beta_f23_repo_available and
+        ansible_distribution == 'Fedora' and
+        ansible_distribution_version == '23'
+
+# These can go away when https://fedorahosted.org/spin-kickstarts/ticket/59 is fixed
+- stat:
+      path: /etc/sudoers.d/vagrant-nopasswd
+  name: Detect vagrant sudoers file
+  register: vagrant_nopasswd
+- lineinfile:
+      dest: "{{ vagrant_nopasswd.stat.path }}"
+      regexp: '^vagrant'
+      line: 'vagrant ALL=(ALL) NOPASSWD: ALL'
+      validate: 'visudo -cf %s'
+      mode: 0440
+  when: vagrant_nopasswd.stat.exists
+  name: Rejigger vagrant sudoers file
 
 - name: Install packages
   dnf: name={{ item }} state=present
