--- a/playpen/ansible/roles/qpidd/tasks/main.yml
+++ b/playpen/ansible/roles/qpidd/tasks/main.yml
@@ -2,8 +2,13 @@
 - name: Install packages
   dnf: name={{ item }} state=present
   with_items:
-    - qpid-cpp-server
-    - qpid-cpp-server-store
+    # qpid is broken in f23, so we have to install the compat packages:
+    #  https://bugzilla.redhat.com/show_bug.cgi?id=1286881
+    # - qpid-cpp-server
+    # - qpid-cpp-server-linerstore
+    - compat-qpid-cpp-server
+    - compat-qpid-cpp-server-store
+    - qpid-tools
 
 - name: Start and enable services
   service: name={{ item }} state=started enabled=yes
